Backend/securehub_back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: securehub
  annotations:
    metallb.universe.tf/address-pool: "primary"
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: LoadBalancer
